/*
	DO NOT EDIT THIS FILE
	It is automatically generated by tool
*/

syntax = "proto2"; 
package _settings_client_;

message _battle_ {
optional uint32 id = 1;
optional string path = 2;
}

message _error_ {
optional uint32 id = 1;
optional string error = 2;
}

message _effect_ {
optional uint32 id = 1;
optional string path = 2;
optional float high = 3;
optional float time = 4;
}

message _animation_ {
optional uint32 id = 1;
optional string name = 2;
optional float point = 3;
optional float length = 4;
}

message _global_ {
optional uint32 id = 1;
optional float value = 2;
}

message _alert_ {
optional uint32 id = 1;
optional string value = 2;
}

message _audio_ {
optional uint32 id = 1;
optional string path = 2;
}

message _Excel_ {
repeated _battle_ battleData = 1;
repeated _error_ errorData = 2;
repeated _effect_ effectData = 3;
repeated _animation_ animationData = 4;
repeated _global_ globalData = 5;
repeated _alert_ alertData = 6;
repeated _audio_ audioData = 7;
}
